# repoGhost

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
repoGhost/: _version.py  cli.py
repoGhost.egg-info/: PKG-INFO  SOURCES.txt
scripts/: create_release.sh  tag_version.sh
