[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "repoGhost"
dynamic = ["version"]
description = "CLI tool to summarize code in a repo."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="George"}
]
requires-python = ">=3.8"
keywords = ["openai", "repo", "summaries", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "openai>=1.0.0",
  "click>=8.0.0",
  "tqdm>=4.65.0",
  "pyperclip>=1.8.2",
  "rich>=13.0.0"
]

[project.scripts]
repoGhost = "repoGhost.cli:main"

[tool.setuptools]
packages = ["repoGhost"]

[tool.setuptools_scm]
write_to = "repoGhost/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"
